@@ -39,8 +39,9 @@ public:
   MethodOfMomentsFactory();
 
   /** Parameters constructor */
-  explicit MethodOfMomentsFactory(const Distribution & distribution,
-                                  const Interval & optimizationBounds = Interval());
+  MethodOfMomentsFactory(const Distribution & distribution,
+                         const Indices & momentOrders,
+                         const Interval & optimizationBounds = Interval());
 
   /** Virtual constructor */
   MethodOfMomentsFactory * clone() const override;
@@ -80,6 +81,10 @@ public:
   Point getKnownParameterValues() const;
   Indices getKnownParameterIndices() const;
 
+  /** Moments orders accessor */
+  void setMomentOrders(const Indices & momentsOrders);
+  Indices getMomentOrders() const;
+
   /** Method save() stores the object through the StorageManager */
   void save(Advocate & adv) const override;
 
@@ -89,6 +94,9 @@ public:
 protected:
   /* The underlying distribution */
   Distribution distribution_;
+
+  /* Moments orders */
+  Indices momentOrders_;
 
   /* Solver & optimization problem for log-likelihood maximization */
   OptimizationAlgorithm solver_;
